--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -17,7 +17,7 @@
             
             <form method="post" action="/login">
                 <div class="form-group">
-                    <label for="email">Username</label>
+                    <label for="email">Email</label>
                     <input type="email" id="email" name="email" placeholder="Enter your username" required>
                 </div>
                 <div class="form-group">
